AngularJS header/footer in separate views, Auth changes and Charts page.
- Header and Footer are now separate views (partials)

- Auth.isAuthenticated() not returns proper Boolean (@Lex)

- Charts page with Controller

- Strings are now done using CoffeeScript string interpolation

- Housekeeping...

--- a/www-src/dataplay-ui/app/views/charts.html
+++ b/www-src/dataplay-ui/app/views/charts.html
@@ -1,1 +1,123 @@
-<p>This is the charts view.</p>
+<div class="charts" ng-init="init()">
+	<h1>{{info.Title}}</h1>
+	<h5 ng-bind-html="info.Notes"></h5>
+
+	<div class="row" ng-init="getCharts()">
+		<div class="col-md-12" ng-switch="chart.type">
+			<div
+				ng-switch-when="lines"
+
+				dc-chart="lineChart"
+
+				dc-mouse-zoomable="false"
+				dc-brush-on="false"
+
+				dc-elastic-y="true"
+				dc-transition-duration="500"
+				dc-colors="d3.scale.category20()"
+
+				dc-render-data-points="true"
+				dc-render-area="true"
+
+				dc-post-setup-chart="lineChartPostSetup"
+			></div>
+
+			<!-- <div
+				ng-switch-when="bar"
+
+				dc-chart="barChart"
+
+				dc-width="{{width}}"
+				dc-height="{{height}}"
+				dc-margins="{{margin}}"
+				dc-mouse-zoomable="false"
+				dc-brush-on="false"
+
+				dc-elastic-y="true"
+				dc-transition-duration="500"
+				dc-colors="d3.scale.category20()"
+
+				dc-center-bar="true"
+				dc-gap="2"
+				dc-dimension="chart.entry.dimension"
+				dc-group="chart.entry.group"
+				dc-x="chart.xScale"
+				dc-post-setup-chart="barChartPostSetup"
+			></div> -->
+
+			<!-- <div
+				ng-switch-when="row"
+
+				dc-chart="rowChart"
+
+				dc-width="{{width}}"
+				dc-height="{{height}}"
+				dc-margins="{{margin}}"
+				dc-mouse-zoomable="false"
+				dc-brush-on="false"
+
+				dc-elastic-y="true"
+				dc-transition-duration="500"
+				dc-colors="d3.scale.category20()"
+				dc-color-accessor="chart.colorAccessor"
+
+				dc-elastic-x="true"
+				dc-label-offset-y="chart.labelOffsetY"
+				dc-label="chart.label"
+				dc-gap="1"
+				dc-tick-format="chart.tickFormat"
+				dc-dimension="chart.entry.dimension"
+				dc-group="chart.entry.group"
+				dc-title="chart.title"
+				dc-ticks="2"
+			></div> -->
+
+			<!-- <div
+				ng-switch-when="pie"
+
+				dc-chart="pieChart"
+
+				dc-width="{{width}}"
+				dc-height="{{height}}"
+				dc-margins="{{margin}}"
+				dc-mouse-zoomable="false"
+				dc-brush-on="false"
+
+				dc-radius="chart.radius"
+				dc-inner-radius="chart.innerRadius"
+				dc-transition-duration="500"
+				dc-colors="d3.scale.category20()"
+
+				dc-dimension="chart.entry.dimension"
+				dc-group="chart.entry.group"
+				dc-min-angle-for-label="0.1"
+				dc-title="chart.title"
+				dc-slices-cap="6"
+			></div> -->
+
+			<!-- <div
+				ng-switch-when="bubble"
+
+				dc-chart="bubbleOverlay"
+
+				dc-width="{{width}}"
+				dc-height="{{height}}"
+				dc-margins="{{margin}}"
+				dc-mouse-zoomable="false"
+				dc-brush-on="false"
+
+				dc-transition-duration="500"
+				dc-colors="d3.scale.category20()"
+
+				dc-dimension="chart.entry.dimension"
+				dc-group="chart.entry.group"
+				dc-x="chart.xScale"
+				dc-max-bubble-relative-size="0.1"
+				dc-min-radis-with-label="5"
+				dc-post-setup-chart="bubbleChartPostSetup"
+			></div> -->
+
+			<div  ng-switch-default>Oops! nothing to plot.</div>
+		</div>
+	</div>
+</div>
