Line charts post render hooks. UI stability.

--- a/www-src/dataplay-ui/app/styles/charts.less
+++ b/www-src/dataplay-ui/app/styles/charts.less
@@ -13,3 +13,17 @@
 		max-height: 205px;
 	}
 }
+
+.overview, .charts {
+	.dc-chart {
+		g.axis text {
+			fill: #ffffff
+		}
+		.axis path, .axis line {
+			stroke: #ffffff
+		}
+		.x-axis-label, .y-axis-label {
+			fill: #ffffff
+		}
+	}
+}
