--- a/www-src/dataplay-ui/app/views/charts.html
+++ b/www-src/dataplay-ui/app/views/charts.html
@@ -26,6 +26,7 @@
 				dc-render-area="true"
 
 				dc-post-setup-chart="lineChartPostSetup"
+				dc-on-post-render="lineChartPostRender"
 			></div>
 
 			<!-- <div
