--- a/www-src/dataplay-ui/app/views/charts.html
+++ b/www-src/dataplay-ui/app/views/charts.html
@@ -56,6 +56,7 @@
 			></div>
 
 			<!-- <div
+				id="chart"
 				ng-switch-when="row"
 
 				dc-chart="rowChart"
@@ -82,7 +83,8 @@
 				dc-ticks="2"
 			></div> -->
 
-			<!-- <div
+			<div
+				id="chart"
 				ng-switch-when="pie"
 
 				dc-chart="pieChart"
@@ -93,19 +95,14 @@
 				dc-mouse-zoomable="false"
 				dc-brush-on="false"
 
-				dc-radius="chart.radius"
-				dc-inner-radius="chart.innerRadius"
 				dc-transition-duration="500"
 				dc-colors="d3.scale.category20()"
 
-				dc-dimension="chart.entry.dimension"
-				dc-group="chart.entry.group"
-				dc-min-angle-for-label="0.1"
-				dc-title="chart.title"
-				dc-slices-cap="6"
-			></div> -->
+				dc-post-setup-chart="pieChartPostSetup"
+			></div>
 
-			<!-- <div
+			<div
+				id="chart"
 				ng-switch-when="bubble"
 
 				dc-chart="bubbleOverlay"
@@ -119,13 +116,8 @@
 				dc-transition-duration="500"
 				dc-colors="d3.scale.category20()"
 
-				dc-dimension="chart.entry.dimension"
-				dc-group="chart.entry.group"
-				dc-x="chart.xScale"
-				dc-max-bubble-relative-size="0.1"
-				dc-min-radis-with-label="5"
 				dc-post-setup-chart="bubbleChartPostSetup"
-			></div> -->
+			></div>
 
 			<div  ng-switch-default>Oops! nothing to plot.</div>
 		</div>
