Frontend theme change, search query string support and other fixes.
- Using Flatly theme for bootstrap

- Charts CSS changes (SVG Fills)

- Home/Search results alignment

- Search page now have support for state preserve and query string.

- Support for URL Route change w/o page reload.

--- a/www-src/dataplay-ui/app/styles/charts.less
+++ b/www-src/dataplay-ui/app/styles/charts.less
@@ -15,18 +15,25 @@
 }
 
 .overview, .charts {
-	.dc-chart {
-		g.axis text {
-			fill: #ffffff
-		}
-		.axis path, .axis line {
-			stroke: #ffffff
-		}
-		.x-axis-label, .y-axis-label {
-			fill: #ffffff
-		}
-		.dc-legend {
-			fill: #ffffff;
-		}
+	.chart-info {
+		margin-top: 20px;
 	}
+
+	.dc-chart {
+		.pie-slice {
+			fill: #000000
+		}
+	// 	g.axis text {
+	// 		// fill: #ffffff
+	// 	}
+	// 	.axis path, .axis line {
+	// 		// stroke: #ffffff
+	// 	}
+	// 	.x-axis-label, .y-axis-label {
+	// 		// fill: #ffffff
+	// 	}
+	// 	.dc-legend {
+	// 		// fill: #ffffff;
+	// 	}
+	// }
 }
