--- a/www-src/dataplay-ui/app/styles/layout.less
+++ b/www-src/dataplay-ui/app/styles/layout.less
@@ -18,11 +18,11 @@ body > .container {
 	bottom: 0;
 	width: 100%;
 	height: 60px;
-	color: #ffffff;
-	background-color: #464545;
+	// color: #ffffff;
+	// background-color: #464545;
 
 	.text-muted {
-		color: #ffffff;
+		// color: #ffffff;
 	}
 }
 
