Overview screen using related charts and api/related fixes.

--- a/www-src/dataplay-ui/app/styles/charts.less
+++ b/www-src/dataplay-ui/app/styles/charts.less
@@ -7,11 +7,11 @@
 		margin-top: 20px;
 	}
 
-	.chartSwitch {
-		height: 205px;
-		min-height: 205px;
-		max-height: 205px;
-	}
+	// .chartSwitch {
+	// 	height: 205px;
+	// 	min-height: 205px;
+	// 	max-height: 205px;
+	// }
 }
 
 .overview, .charts {
