WIP: Separating Bar(Row) and Column charts....

--- a/www-src/dataplay-ui/app/styles/charts.less
+++ b/www-src/dataplay-ui/app/styles/charts.less
@@ -7,11 +7,18 @@
 		margin-top: 20px;
 	}
 
-	// .chartSwitch {
+	.chartSwitch {
 	// 	height: 205px;
 	// 	min-height: 205px;
 	// 	max-height: 205px;
-	// }
+
+		.well {
+			height: 200px;
+			min-height: 200px;
+			max-height: 200px;
+			line-height: 161px; // height - margin - padding
+		}
+	}
 }
 
 .overview, .charts {
