--- a/www-src/dataplay-ui/app/views/overview.html
+++ b/www-src/dataplay-ui/app/views/overview.html
@@ -93,7 +93,7 @@
 				dc-post-setup-chart="pieChartPostSetup"
 			></div>
 
-			<!-- <div class="chartSwitch"
+			<div class="chartSwitch"
 				ng-if="chart.type == 'bubble'"
 
 				dc-chart="bubbleOverlay"
@@ -107,13 +107,8 @@
 				dc-transition-duration="500"
 				dc-colors="d3.scale.category20()"
 
-				dc-dimension="chart.entry.dimension"
-				dc-group="chart.entry.group"
-				dc-x="chart.xScale"
-				dc-max-bubble-relative-size="0.1"
-				dc-min-radis-with-label="5"
 				dc-post-setup-chart="bubbleChartPostSetup"
-			></div> -->
+			></div>
 
 			<div class="chartSwitch" >
 				<div class="well text-center">Oops! nothing to plot.</div>
