--- a/www-src/dataplay-ui/app/views/overview.html
+++ b/www-src/dataplay-ui/app/views/overview.html
@@ -3,7 +3,19 @@
 
 	<a class="btn btn-warning pull-right reset" ng-click="resetAll()">Reset all</a>
 
-	<div class="row" ng-init="getRelatedCharts()">
+	<div class="row" ng-show="chartsInfo.length <= 0">
+		<div class="col-md-12">
+			<div class="spinner">
+				<div class="rect1"></div>
+				<div class="rect2"></div>
+				<div class="rect3"></div>
+				<div class="rect4"></div>
+				<div class="rect5"></div>
+			</div>
+		</div>
+	</div>
+
+	<div class="row" ng-init="getRelatedCharts()" ng-show="chartsInfo.length > 0">
 		<div class="col-md-4" ng-repeat="chart in chartsInfo" id="{{chart.id}}">
 			<a ng-href="/charts/{{params.id}}/{{chart.type}}/{{chart.xLabel}}/{{chart.yLabel}}">
 				<span><h4>{{chart.xLabel}}</h4> <h5>vs</h5> <h4>{{chart.yLabel}}</h4></span>
