--- a/www-src/dataplay-ui/app/views/overview.html
+++ b/www-src/dataplay-ui/app/views/overview.html
@@ -17,8 +17,11 @@
 
 	<div class="row" ng-init="getRelatedCharts()" ng-show="chartsInfo.length > 0">
 		<div class="col-md-4" ng-repeat="chart in chartsInfo" id="{{chart.id}}">
-			<a ng-href="/charts/{{params.id}}/{{chart.type}}/{{chart.xLabel}}/{{chart.yLabel}}">
+			<a ng-href="/charts/{{params.id}}/{{chart.type}}/{{chart.xLabel}}/{{chart.yLabel}}" ng-hide="chart.type == 'bubble'">
 				<span><h4>{{chart.xLabel}}</h4> <h5>vs</h5> <h4>{{chart.yLabel}}</h4></span>
+			</a>
+			<a ng-href="/charts/{{params.id}}/{{chart.type}}/{{chart.xLabel}}/{{chart.yLabel}}/{{chart.zLabel}}" ng-show="chart.type == 'bubble'">
+				<span><h4>{{chart.xLabel}}</h4> <h5>vs</h5> <h4>{{chart.yLabel}}</h4> <h5>vs</h5> <h4>{{chart.zLabel}}</h4></span>
 			</a>
 
 			<div class="chartSwitch"
@@ -107,7 +110,7 @@
 			<div class="chartSwitch"
 				ng-if="chart.type == 'bubble'"
 
-				dc-chart="bubbleOverlay"
+				dc-chart="bubbleChart"
 
 				dc-width="{{width}}"
 				dc-height="{{height}}"
@@ -115,6 +118,8 @@
 				dc-mouse-zoomable="false"
 				dc-brush-on="false"
 
+				dc-elastic-y="true"
+				dc-elastic-x="true"
 				dc-transition-duration="500"
 				dc-colors="d3.scale.category20()"
 
