Bubble Charts are working for Linear values.

--- a/www-src/dataplay-ui/app/views/overview.html
+++ b/www-src/dataplay-ui/app/views/overview.html
@@ -118,10 +118,13 @@
 				dc-mouse-zoomable="false"
 				dc-brush-on="false"
 
-				dc-elastic-y="true"
-				dc-elastic-x="true"
 				dc-transition-duration="500"
 				dc-colors="d3.scale.category20()"
+
+				dc-render-horizontal-grid-lines="true"
+				dc-render-vertical-grid-lines="true"
+				dc-render-label="true"
+				dc-render-title="true"
 
 				dc-post-setup-chart="bubbleChartPostSetup"
 			></div>
