--- a/www-src/dataplay-ui/app/styles/spinner.less
+++ b/www-src/dataplay-ui/app/styles/spinner.less
@@ -1,12 +1,12 @@
 .spinner {
 	margin: 100px auto;
-	width: 50px;
-	height: 30px;
+	width: 75px;
+	height: 50px;
 	text-align: center;
 	font-size: 10px;
 
 	& > div {
-		background-color: #333;
+		background-color: #2c3e50;
 		height: 100%;
 		width: 6px;
 		display: inline-block;
