--- a/www-src/dataplay-ui/app/views/charts.html
+++ b/www-src/dataplay-ui/app/views/charts.html
@@ -7,6 +7,7 @@
 	<div class="row">
 		<div class="col-md-12" ng-switch="chart.type">
 			<div class="chartSwitch"
+				id="chart"
 				ng-if="chart.type == 'line'"
 
 				dc-chart="lineChart"
@@ -31,6 +32,7 @@
 			></div>
 
 			<div class="chartSwitch"
+				id="chart"
 				ng-if="chart.type == 'row' || chart.type == 'bar'"
 
 				dc-chart="rowChart"
@@ -52,6 +54,7 @@
 			></div>
 
 			<div class="chartSwitch"
+				id="chart"
 				ng-if="chart.type == 'column'"
 
 				dc-chart="barChart"
@@ -73,6 +76,7 @@
 			></div>
 
 			<div class="chartSwitch"
+				id="chart"
 				ng-if="chart.type == 'pie'"
 
 				dc-chart="pieChart"
@@ -90,6 +94,7 @@
 			></div>
 
 			<div class="chartSwitch"
+				id="chart"
 				ng-if="chart.type == 'bubble'"
 
 				dc-chart="bubbleChart"
@@ -100,10 +105,13 @@
 				dc-mouse-zoomable="false"
 				dc-brush-on="false"
 
-				dc-elastic-y="true"
-				dc-elastic-x="true"
 				dc-transition-duration="500"
 				dc-colors="d3.scale.category20()"
+
+				dc-render-horizontal-grid-lines="true"
+				dc-render-vertical-grid-lines="true"
+				dc-render-label="true"
+				dc-render-title="true"
 
 				dc-post-setup-chart="bubbleChartPostSetup"
 			></div>
