Bubble Chart Relative size.

--- a/www-src/dataplay-ui/app/views/charts.html
+++ b/www-src/dataplay-ui/app/views/charts.html
@@ -112,6 +112,12 @@
 				dc-render-vertical-grid-lines="true"
 				dc-render-label="true"
 				dc-render-title="true"
+				dc-zoom-out-restrict="true"
+				dc-mouse-zoomable="true"
+				dc-max-bubble-relative-size="0.0125"
+
+				dc-x-axis-label="chart.xLabel"
+				dc-y-axis-label="chart.yLabel"
 
 				dc-post-setup-chart="bubbleChartPostSetup"
 			></div>
