--- a/www-src/dataplay-ui/app/views/overview.html
+++ b/www-src/dataplay-ui/app/views/overview.html
@@ -125,6 +125,7 @@
 				dc-render-vertical-grid-lines="true"
 				dc-render-label="true"
 				dc-render-title="true"
+				dc-max-bubble-relative-size="0.0125"
 
 				dc-post-setup-chart="bubbleChartPostSetup"
 			></div>
