Overview and Chart Bubbles with logarithmic scale.

--- a/www-src/dataplay-ui/app/views/overview.html
+++ b/www-src/dataplay-ui/app/views/overview.html
@@ -115,17 +115,17 @@
 				dc-width="{{width}}"
 				dc-height="{{height}}"
 				dc-margins="{{margin}}"
-				dc-mouse-zoomable="false"
 				dc-brush-on="false"
 
+				dc-elastic-y="true"
 				dc-transition-duration="500"
 				dc-colors="d3.scale.category20()"
 
-				dc-render-horizontal-grid-lines="true"
-				dc-render-vertical-grid-lines="true"
 				dc-render-label="true"
 				dc-render-title="true"
-				dc-max-bubble-relative-size="0.0125"
+
+				dc-x-axis-label="chart.xLabel"
+				dc-y-axis-label="chart.yLabel"
 
 				dc-post-setup-chart="bubbleChartPostSetup"
 			></div>
