Overview/Chart Linear and Date scales.

--- a/www-src/dataplay-ui/app/views/charts.html
+++ b/www-src/dataplay-ui/app/views/charts.html
@@ -102,7 +102,7 @@
 				dc-width="{{width}}"
 				dc-height="{{height}}"
 				dc-margins="{{margin}}"
-				dc-brush-on="false"
+				dc-brush-on="true"
 
 				dc-transition-duration="500"
 				dc-colors="d3.scale.category20()"
