--- a/www-src/dataplay-ui/app/views/overview.html
+++ b/www-src/dataplay-ui/app/views/overview.html
@@ -115,13 +115,12 @@
 				dc-width="{{width}}"
 				dc-height="{{height}}"
 				dc-margins="{{margin}}"
-				dc-brush-on="false"
+				dc-brush-on="true"
 
-				dc-elastic-y="true"
 				dc-transition-duration="500"
 				dc-colors="d3.scale.category20()"
 
-				dc-render-label="true"
+				dc-render-label="false"
 				dc-render-title="true"
 
 				dc-x-axis-label="chart.xLabel"
