Chart views are now partial templates. Overview loader cache.

--- a/www-src/dataplay-ui/app/views/charts.html
+++ b/www-src/dataplay-ui/app/views/charts.html
@@ -6,118 +6,11 @@
 
 	<div class="row">
 		<div class="col-md-12" ng-switch="chart.type">
-			<div class="chartSwitch"
-				id="chart"
-				ng-if="chart.type == 'line'"
-
-				dc-chart="lineChart"
-
-				dc-width="{{width}}"
-				dc-height="{{height}}"
-				dc-margins="{{margin}}"
-				dc-mouse-zoomable="false"
-				dc-brush-on="false"
-
-				dc-elastic-y="true"
-				dc-transition-duration="500"
-				dc-colors="d3.scale.category20()"
-
-				dc-x-axis-label="chart.xLabel"
-				dc-y-axis-label="chart.yLabel"
-
-				dc-render-data-points="true"
-				dc-render-area="true"
-
-				dc-post-setup-chart="lineChartPostSetup"
-			></div>
-
-			<div class="chartSwitch"
-				id="chart"
-				ng-if="chart.type == 'row' || chart.type == 'bar'"
-
-				dc-chart="rowChart"
-
-				dc-width="{{width}}"
-				dc-height="{{height}}"
-				dc-margins="{{margin}}"
-				dc-mouse-zoomable="false"
-				dc-brush-on="false"
-
-				dc-elastic-x="true"
-				dc-transition-duration="500"
-				dc-colors="d3.scale.category20()"
-
-				dc-x-axis-label="chart.xLabel"
-				dc-y-axis-label="chart.yLabel"
-
-				dc-post-setup-chart="rowChartPostSetup"
-			></div>
-
-			<div class="chartSwitch"
-				id="chart"
-				ng-if="chart.type == 'column'"
-
-				dc-chart="barChart"
-
-				dc-width="{{width}}"
-				dc-height="{{height}}"
-				dc-margins="{{margin}}"
-				dc-mouse-zoomable="false"
-				dc-brush-on="false"
-
-				dc-elastic-y="true"
-				dc-transition-duration="500"
-				dc-colors="d3.scale.category20()"
-
-				dc-x-axis-label="chart.xLabel"
-				dc-y-axis-label="chart.yLabel"
-
-				dc-post-setup-chart="columnChartPostSetup"
-			></div>
-
-			<div class="chartSwitch"
-				id="chart"
-				ng-if="chart.type == 'pie'"
-
-				dc-chart="pieChart"
-
-				dc-width="{{width}}"
-				dc-height="{{height}}"
-				dc-margins="{{margin}}"
-				dc-mouse-zoomable="false"
-				dc-brush-on="false"
-
-				dc-transition-duration="500"
-				dc-colors="d3.scale.category20()"
-				dc-inner-radius="100"
-
-				dc-post-setup-chart="pieChartPostSetup"
-			></div>
-
-			<div class="chartSwitch"
-				id="chart"
-				ng-if="chart.type == 'bubble'"
-
-				dc-chart="bubbleChart"
-
-				dc-width="{{width}}"
-				dc-height="{{height}}"
-				dc-margins="{{margin}}"
-				dc-brush-on="true"
-
-				dc-transition-duration="500"
-				dc-colors="d3.scale.category20()"
-
-				dc-render-label="true"
-				dc-render-title="true"
-				dc-zoom-out-restrict="true"
-				dc-mouse-zoomable="true"
-
-				dc-x-axis-label="chart.xLabel"
-				dc-y-axis-label="chart.yLabel"
-
-				dc-post-setup-chart="bubbleChartPostSetup"
-			></div>
+			<span ng-include="'views/charts/line.html'"></span>
+			<span ng-include="'views/charts/row.html'"></span>
+			<span ng-include="'views/charts/column.html'"></span>
+			<span ng-include="'views/charts/pie.html'"></span>
+			<span ng-include="'views/charts/bubble.html'"></span>
 		</div>
 	</div>
 </div>
