--- a/www-src/dataplay-ui/app/views/overview.html
+++ b/www-src/dataplay-ui/app/views/overview.html
@@ -37,5 +37,5 @@
 		</div>
 	</div>
 
-	<div class="row" ng-init="getCorrelatedCharts()"></div>
+	<!-- <div class="row" ng-init="getCorrelatedCharts()"></div> -->
 </div>
