Line Chart Range bars.

--- a/www-src/dataplay-ui/app/views/charts/line.html
+++ b/www-src/dataplay-ui/app/views/charts/line.html
@@ -1,4 +1,4 @@
-<div class="chartSwitch line"
+<div class="dc-chart chartSwitch line"
 	ng-if="chart.type == 'line'"
 
 	dc-chart="lineChart"
@@ -6,7 +6,7 @@
 	dc-width="{{width}}"
 	dc-height="{{height}}"
 	dc-margins="{{margin}}"
-	dc-mouse-zoomable="false"
+	dc-mouse-zoomable="true"
 	dc-brush-on="false"
 
 	dc-elastic-y="true"
@@ -21,19 +21,21 @@
 	dc-post-setup-chart="lineChartPostSetup"
 ></div>
 
-<div class="chartSwitch range"
-	id="lineChartRange"
+<div class="dc-chart chartSwitch range"
 	ng-if="chart.type == 'line'"
 
 	dc-chart="barChart"
+
+	dc-name="'lineChartRange'"
 
 	dc-width="{{width}}"
 	dc-height="100"
 	dc-margins="{{marginAlt}}"
 	dc-mouse-zoomable="false"
+	dc-brush-on="true"
 
-	dc-elastic-y="true"
-	dc-transition-duration="500"
+	dc-always-use-rounding="true"
+	dc-center-bar="true"
 
 	dc-x-axis-label="chart.xLabel"
 
